<resources>
    <string name="app_name">ETicketing</string>
    <string name="van_vihar_dhungri">Van Vihar Dhungri</string>
    <string name="van_vihar_manali">Van Vihar Manali</string>
    <string name="nature_park_manali">Nature Park Manali</string>
    <string name="mini_zoo_rewalsar">Mini Zoo Rewalsar</string>
    <string name="zones">Zones</string>
    <string name="history">History</string>


    <string name="children">Children</string>
    <string name="adult">Adult</string>
    <string name="type">Type</string>
    <string name="entry_ticket">Entry Ticket</string>
    <string name="battery_operator_vehicle">Battery Operator Vehicle</string>
    <string name="boating">Boating</string>
    <string name="count">Count</string>
    <string name="total">Total</string>
    <string name="print">Print</string>
    <string name="other">Other</string>
    <string name="parking">Parking</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="passcode_mismatch">Passcode didn\'t match</string>


    <string name="please_wait">Please wait loading...</string>

    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="change_password">Change Password?</string>
    <string name="change">Change</string>
    <string name="all">All</string>
    <string name="custom">Custom</string>
    <string name="search_by">Search By</string>
    <string name="search">Search</string>
    <string name="from_date">From Date</string>
    <string name="from_date_validation">Please select From Date</string>
    <string name="to_date_validation">Please select To Date</string>
    <string name="to_date">To Date</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="already_have_account">ALREADY HAVE AN ACCOUNT?</string>

    <string name="signup"> \u0020 SIGN UP</string>
    <string name="signin2"> \u0020 SIGN IN</string>
    <string name="signup2">Sign Up</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="phone">PHONE</string>
    <string name="enter_phone_number">Enter phone number</string>

    <string name="email">EMAIL</string>
    <string name="enter_email">Enter email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="password_limit">Password must be of 6 digits.</string>
    <string name="confirm_password_limit">Confirm password must be of 6 digits.</string>
    <string name="please_enter_first_name">Please enter first name.</string>
    <string name="please_enter_last_name">Please enter last name.</string>
    <string name="please_enter_phone_number">Please enter phone number.</string>
    <string name="number_limit">Please enter phone number minimum of 6 digits.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_confirm_not_matched">Password &amp; confirm password didn\'t match.</string>
    <string name="internet_not_available">Internet is not connected. Please check and try again.</string>
    <string name="ticket_not_empty">Ticket should not be empty.</string>

    <string name="enter_forgot_password">We just need your registered Email Id to send your password reset instructions.</string>
    <string name="enter_change_password">To change password, please enter first old then new password.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="old_passwor_error">Old Password should not be empty.</string>
    <string name="new_passwor_error">New Password should not be empty.</string>
    <string name="confirm_new_passwor_error">Confirm Password should not be empty.</string>
    <string name="match_passwor_error">New and Confirm Password didn\'t match.</string>


    <string name="take_photo">Take Photo</string>
    <string name="image_select">Image</string>
    <string name="select_option">Select Option</string>
    <string name="choose_from_gallery">Choose From Gallery</string>

    <string name="on_permission_decline">Both camera and storage permission are needed to take pictures</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="roboto_light">sans-serif-light</string>


</resources>
