<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/_5sdp"
        card_view:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/change_password"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorDivider" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/enter_change_password"
                android:textColor="@color/colorText" />

            <!-- <EditText
                 android:id="@+id/editTextForgotPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:inputType="textEmailAddress"
                 android:hint="@string/enter_email"
                 android:layout_margin="@dimen/_10sdp"
                 android:backgroundTint="@color/colorGray"
                 tools:ignore="TextFields" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutOldPasswod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/editTextOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/old_password"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/editTextNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/new_password"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/editTextConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_new_password"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textViewCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/textViewSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/change"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>